[tool.poetry]
name = "shiny-couscous"
version = "0.1.0"
description = ""
authors = ["kradam <lovidmann@gmail.com>"]
readme = "README.md"
packages = [{include = "shiny_couscous"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
